[package]
name = "test-rust-webgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
env_logger = "0.10.0"
log = "0.4.20"
nanorand = "0.7.0"
png = "0.17.10"
pollster = "0.3.0"
wgpu = "0.18.0"
winit = "0.29.3"
